--- a/public/scss/utils/_scrollbar.scss
+++ b/public/scss/utils/_scrollbar.scss
@@ -22,13 +22,13 @@
     /* Handle */
     &::-webkit-scrollbar-thumb 
     {
-      background: $color_gray; 
+      background: $color_grey; 
       border-radius: 4px;
       cursor: pointer; 
     
       &:hover 
       {
-        background: $color_blue;
+        background: $color_rose;
       }
     }
 
@@ -53,7 +53,7 @@
     /* Handle */
     &::-moz-scrollbar-thumb 
     {
-      background: $color_gray; 
+      background: $color_grey; 
       border-radius: 4px;
       cursor: pointer; 
     }
@@ -61,7 +61,7 @@
     /* Handle on hover */
     &::-moz-scrollbar-thumb:hover
     {
-      background: $color_blue; 
+      background: $color_rose; 
     }
   }
 
