--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -18,6 +18,7 @@ body
   overflow: hidden;
   padding: 0;
   margin: 0 auto;
+  background-color: $color_white;
 
   @media screen and (max-width: $breakpoint_max_sm)
   {
