--- a/public/scss/components/Banner.module.scss
+++ b/public/scss/components/Banner.module.scss
@@ -1,22 +1,5 @@
 .bannerCarousel
-{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: calc((9 / 16) * 100%) 0 0;
-  position: relative;
-  overflow: hidden;
-  [class*="placeholder"],
-  [class*="BrainhubCarousel__container"]
-  {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  
+{ 
   &_header {
     flex: 0 0 100%;
     text-align: center;
@@ -29,5 +12,7 @@
 
   &_image {
     width: 100%;
+    height: 375px;
+    object-fit: cover;
   }
 }
