--- a/public/scss/components/Header.module.scss
+++ b/public/scss/components/Header.module.scss
@@ -1,88 +1,38 @@
-@import "../base/colors.scss";
-@import "../components/Placeholder.module.scss";
-@import "../components//Form.module.scss";
-@import "../components/Search.module.scss";
+@import '../base/colors.scss';
+@import '../utils/variables';
+@import '../components/Placeholder.module.scss';
 
-.announce {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+.announce
+{
+  @include flex(row, center, center);
   position: relative;
   height: 32px;
-  background-color: $color_blue;
+  background-color: $color_rose;
 
-  &__items {
-    padding: 0;
-    font-weight: 600;
-    font-size: 11px;
+  &_items
+  {
+    @include typographyBuilder(secondary, 400, 12, 15);
     letter-spacing: 0.05em;
-    text-transform: uppercase;
     text-align: center;
     color: $color_white;
+    padding: 0;
     
-    &:empty {
+    &:empty
+    {
       display: none;
     }
   }
 
-  &__close {
-    position: absolute;
-    right: 5px;
-    top: 50%;
+  &_close
+  {
+    @include absolute(50%, 5px);
     transform: translate(-50%, -50%);
     color: $color_white;
 
-    @media screen and (max-width: 576px) {
+    @media screen and (max-width: $breakpoint_max_sm)
+    {
       right: 0;
     }
-
-    &:hover{
-      cursor: pointer;
-    }
-
-    &__icon
-    {
-      @media screen and (max-width: 576px) {
-        width: 20px;
-      }
-    }
-  }
-}
-
-.header
-{
-  height: 64px;
-  position: sticky;
-  top: 0;
-  z-index: 5;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04);
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-}
-
-.nav
-{
-  &_lastino
-  {
-    border: none;
-    background-color: $color_white;
-    justify-content: center;
-    height: 56px;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-  }
-
-  &__icon,
-  &__icon-mobile
-  {
-    color: $color_black;
 
     &:hover
     {
@@ -91,208 +41,86 @@
   }
 }
 
-.navbar
+.header
 {
-  &_menu
-  {
-    flex: 1;
+  @include position(fixed, 32px);
+  @include fixedWidth(375px, true);
+  @include transition();
+  height: 58px;
+  z-index: 10;
 
-    &__icon
-    {
-      cursor: pointer;
-    }
+  &_top
+  {
+    @include position(fixed, 0);
+  }
+
+  &_scroll
+  {
+    @include position(fixed, 0);
+  }
+
+  &_navbar
+  {
+    @include flex(row, center, space-between);
+    @include transition();
+    height: 58px;
+    background: transparent;
+  }
+
+  &_sticky
+  {
+    background-color: $color_white;
+    border-bottom: 1px solid $color_border;
   }
 
   &_logo
   {
-    flex: 1;
-    text-align: center;
-    
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    height: 40px;
+  }
+
+  &_menuIcon
+  {
+    cursor: pointer;
+  }
+
+  &_menus
+  {
+    @include flex(column, center, flex-start);
     position: relative;
-    height: 50px;
-    
-    a
+    margin: 0;
+    padding: 0;
+
+    @include position(absolute, -100vh, auto, auto, auto);
+    @include fixedWidth(375px);
+    @include fixedHeight(100vh);
+    overflow-x: hidden;
+    overflow-y: auto;
+    border: none;
+    background-color: $color_rose_bg2;
+    z-index: 10;
+
+    @include transition();
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+    @media screen and (max-width: $breakpoint_max_sm)
     {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-
-      height: 100%;
+      @include fixedWidth(100%);
     }
 
-    &__image
+    &Height
     {
-      display: block;
-      position: relative;
-      margin: 0 auto;
-      min-height: 100%;
-      max-height: 100%;
-      height: 100%;
-
-      @media screen and (max-width: 575px) {
-        min-height: 25px;
-        max-height: 25px;
-        height: 25px;
-      }
-
-      &__placeholder
-      {
-        width: 105px;
-        height: 35px;
-        background-color: #D3D3D3;
-      }
+      @include position(absolute, calc($header_height + 32px), auto, auto, auto);
     }
-  }
-
-  &_profile_menu
-  {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-
-    .search_icon
+  
+    &Active
     {
-      position: relative;
-
-      .search
-      {
-        position: absolute;
-        right: 0;
-        top: -33px;
-        display: flex;
-        align-items: center;
-        width: 300px;
-        height: 85px;
-        background: $color_gray;
-        padding: 1rem .5rem;
-        z-index: 11;
-
-        input[type="text"]
-        {
-          padding: .5em;
-          width: 100%;
-          border: none;
-          background: transparent;
-
-          &::placeholder{
-            color: rgba(0, 0, 0, .3);
-          }
-
-          &:focus
-          {
-            outline: 0;
-          }
-        }
-
-        &_form
-        {
-          position: relative;
-          width: 100%;
-
-          .btn_search
-          {
-            position: absolute;
-            top: 0;
-            right: 0;
-
-            .icon_search{
-              color: $color_black;
-              font-size: 1.2em;
-            }
-
-            &:focus,
-            &:active{
-              outline: 0;
-              border: none;
-              box-shadow: none;
-            }
-          }
-        }
-      }
+      top: 58px;
+      opacity: 1;
+      visibility: visible;
+      pointer-events: auto;
     }
-
-    &__cart
-    {
-      position: relative;
-    }
-  }
-
-  &__mobile
-  {
-    @media screen and (max-width: 576px) {
-      margin: 0 1rem;
-    }
-  }
-}
-
-.badge_cart
-{
-  position: absolute;
-  font-family: "roboto-black";
-  font-size: 10px;
-  color: $color_white;
-  background: $color_blue;
-  width: 23px;
-  height: 23px;
-  line-height: 2.3;
-  text-align: center;
-  border-radius: 50%;
-  top: -10px;
-  right: -10px;
-  cursor: pointer;
-
-  @media screen and (max-width: 576px) {
-    font-size: 9px;
-    width: 20px;
-    height: 20px;
-    line-height: 2.3;
-  }
-}
-
-.navbar_mobile
-{
-  height: 56px;
-  width: 100%;
-  background: $color_white;
-  z-index: 2;
-
-  &__container
-  {
-    display: flex;
-    justify-content: space-between;
-    height: 56px;
-  }
-
-  &__icon
-  {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    padding: 20px 0;
-
-    &__right
-    {
-      justify-content: flex-end;
-    }
-
-    .mobile_menu_icon
-    {
-      position: relative;
-    }
-  }
-
-  &__logo
-  {
-    flex: 1;
-    text-align: center;
-    margin: auto 0;
   }
 }
 
