--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -2,20 +2,17 @@
 @import './base/all.scss';
 @import 'uno.scss';
 @import './utils/variables.scss';
-@import './utils/_scrollbar.scss';
+@import './utils/scrollbar.scss';
 
 html, body
 {
   background-color: $color_rose_bg1;
-  @extend .scrollbar_main;
-  @extend .scrollbar_whiteTrack;
 }
 
 body
 {
   @include fixedWidth(375px);
   position: relative;
-  overflow: hidden;
   padding: 0;
   margin: 0 auto;
   background-color: $color_white;
