--- a/public/scss/utils/_typography.scss
+++ b/public/scss/utils/_typography.scss
@@ -93,7 +93,7 @@ $headings: (
     }
 }
 
-@mixin typography_builder($font_weight: 400, $font_size: 16, $line_height: 0)
+@mixin typography_builderPrimary($font_weight: 700, $font_size: 16, $line_height: 0)
 {
     @include fontPrimary($font_weight);
     @include fontSize($font_size);
@@ -108,7 +108,29 @@ $headings: (
     }
 }
 
-@mixin typographyBuilder($font_weight: 400, $font_size: 16, $line_height: 0)
+@mixin typography_builderSecondary($font_weight: 400, $font_size: 16, $line_height: 0)
 {
-    @include typography_builder($font_weight, $font_size, $line_height);
+    @include fontSecondary($font_weight);
+    @include fontSize($font_size);
+
+    @if $line_height == 0 
+    {
+        @include lineHeight(($font_size * 150) / 100);
+    }
+    @else
+    {
+        @include lineHeight($line_height);
+    }
+}
+
+@mixin typographyBuilder($type: primary, $font_weight, $font_size, $line_height)
+{
+    @if $type == primary
+    {
+        @include typography_builderPrimary($font_weight, $font_size, $line_height);
+    } 
+    @else if $type == secondary
+    {
+        @include typography_builderSecondary($font_weight, $font_size, $line_height);
+    }
 }
