--- a/public/scss/components/Placeholder.module.scss
+++ b/public/scss/components/Placeholder.module.scss
@@ -13,22 +13,22 @@
 
   &_header
   {
-    &__logo
+    &Logo
     {
       width: 105px;
       height: 35px;
     }
 
-    &__navMobile
+    &Navigation
     {
       height: 40px;
       width: 100%;
       margin-bottom: 1rem;
     }
 
-    &__widget
+    &Widget
     {
-      height: 30px;
+      height: 32px;
       width: 100%;
     }
   }
