--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -16,7 +16,7 @@ body
   padding: 0;
   margin: 0 auto;
   background-color: $color_white;
-  margin-bottom: 82px;
+  padding-bottom: 82px;
 
   @media screen and (max-width: $breakpoint_max_sm)
   {
