fix: change minor scss
- change font family and add z index for footer

--- a/public/scss/components/Button.module.scss
+++ b/public/scss/components/Button.module.scss
@@ -4,7 +4,7 @@
 .btn
 {
   border-radius: 50px;
-  @include typographyBuilder(primary,500,14,24);
+  @include typographyBuilder(secondary,500,14,24);
   border: none;
 
   &:active,&:focus
