--- a/public/scss/components/Placeholder.module.scss
+++ b/public/scss/components/Placeholder.module.scss
@@ -33,14 +33,10 @@
     }
   }
 
-  &__banner
+  &_banner
   {
-    //height: 80vh;
     width: 100%;
-
-    @media screen and (max-width: 991px){
-      //height: 30vh;
-    }
+    height: 375px;
   }
 
   &__announcements
@@ -50,16 +46,21 @@
     width: 100%;
   }
 
+  &_widget
+  {
+    &Service
+    {
+      height: 65px;
+      width: 100%;
+    }
+  }
+
   &_product
   {
-    &__card
+    &Card
     {
-      height: 225px;
+      height: 185px;
       width: 100%;
-
-      @media screen and (max-width: 575px){
-        margin-bottom: 2rem;
-      }
     }
 
     &__cardDetail
