--- a/public/scss/components/Placeholder.module.scss
+++ b/public/scss/components/Placeholder.module.scss
@@ -60,7 +60,8 @@
     &Card
     {
       height: 185px;
-      width: 100%;
+      width: 130px;
+      margin-right: 16px;
     }
 
     &__cardDetail
