feat: cart detail
- remove unused code
- create and modified scss cart detail and form textarea
- add spinner as placeholder loading

--- a/public/scss/utils/_colors.scss
+++ b/public/scss/utils/_colors.scss
@@ -19,3 +19,4 @@ $color_error             : #CC4534;
 $color_success           : #53B671;
 $color_warning           : #F2C14F;
 $color_info              : #3677C3;
+$color_placeholder       : #f6f7f8;
