--- a/public/scss/components/Form.module.scss
+++ b/public/scss/components/Form.module.scss
@@ -1,4 +1,5 @@
-@import "../base/colors.scss";
+@import "../base/colors";
+@import "../utils/variables";
 
 .sirclo_form
 {
@@ -177,4 +178,25 @@
 .icon_password
 {
   height: 1.25em;
+}
+
+.form 
+{
+  textarea
+  {
+    padding: 15px 24px 0 24px;
+    @include typographyBuilder(secondary,400,14,24);
+    height: 58px;
+    width: 100%;
+    border: 1px solid $color_border;
+    box-sizing: border-box;
+    border-radius: 37px;
+    resize: none;
+    &:focus
+    {
+      outline: none !important;
+      border: 1px solid $color_rose;
+      border-radius: 37px;
+    }
+  }
 }
