--- a/public/scss/components/CartDetail.module.scss
+++ b/public/scss/components/CartDetail.module.scss
@@ -2,10 +2,16 @@
 
 .cart
 {
+  &_breadcrumb
+  {
+    padding: 58px 18px 0 18px;
+    margin: 20px 0 24px 0;
+  }
+
   &_header
   {
     @include flex(row,center,space-between);
-    padding: 20px 18px 0 18px;
+    padding: 0 18px 0 18px;
 
     & :first-child
     {
@@ -217,5 +223,5 @@
 
 .cartFooter
 {
-  padding: 24px 18px 0 18px;
+  padding: 24px 18px 106px 18px;
 }
