--- a/public/scss/components/CartDetail.module.scss
+++ b/public/scss/components/CartDetail.module.scss
@@ -142,7 +142,7 @@
       @include typographyBuilder(secondary,400,10,16);
       color: $color_text_secondary;
       display: block;
-      content: "Total";
+      content: "Subtotal";
     }
   }
 
