--- a/public/scss/components/Form.module.scss
+++ b/public/scss/components/Form.module.scss
@@ -200,4 +200,22 @@
       border-radius: 37px;
     }
   }
+
+  input
+  {
+    @include typographyBuilder(secondary,400,14,24);
+    height: 58px;
+    width: 100%;
+    border: 1px solid $color_border;
+    box-sizing: border-box;
+    border-radius: 37px;
+    padding: 0 24px;
+
+    &:focus
+    {
+      outline: none !important;
+      border: 1px solid $color_rose;
+      border-radius: 37px;
+    }
+  }
 }
