--- a/public/scss/pages/Products.module.scss
+++ b/public/scss/pages/Products.module.scss
@@ -69,264 +69,77 @@
 
   &_sortLabel
   {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-
-  &_filter
-  {
-    & > div
-    {
-      margin-bottom: 30px;
-    }
-  }
-
-  &_filterName
-  {
-    font-size: 18px;
+    @include fixedWidth(100%);
+    @include typographyBuilder(secondary, 400, 14, 24);
+    background: $color_rose_bg2;
+    padding: 4px 12px;
     margin-bottom: 16px;
   }
+}
 
-  &_filterPrice
+.category
+{
+  padding-left: 12px;
+  margin-bottom: 24px;
+
+  &_list
   {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 10px !important;
+    list-style: none;
+    margin: 12px 0;
 
-    & > input
+    &:first-child
     {
-      flex: 1;
-      width: 100%;
-      margin-right: 0;
-      -webkit-appearance: none;
+      margin-top: 0;
+    }
 
-      &::-webkit-slider-thumb 
-      {
-        -webkit-appearance: none;
-        width: 14px;
-        height: 14px;
-        margin: -3px 0 0;
-        border-radius: 50%;
-        background: $color_blue;
-        cursor: pointer;
-        border: 0 !important;
-      }
-  
-      &::-moz-range-thumb 
-      {
-        width: 14px;
-        height: 14px;
-        border-radius: 50%;
-        background: $color_blue;
-        cursor: pointer;
-      }
+    &:last-child
+    {
+      margin-bottom: 0;
+    }
 
-      &::-ms-thumb 
-      {
-        width: 14px;
-        height: 14px;
-        margin: -3px 0 0;
-        border-radius: 50%;
-        background: $color_blue;
-        cursor: pointer;
-        border: 0 !important;
-      }
+    ul
+    {
+      margin-top: 12px;
+      margin-bottom: 12px;
+    }
+  }
 
-      &::-webkit-slider-runnable-track 
-      {
-        width: 100%;
-        height: 8px;
-        cursor: pointer;
-        background: $color_gray_low;
-        border-radius: 3px;
-      }
+  &_listContainer
+  {
+    @include flex(row, center, space-between);
 
-      &::-moz-range-track 
+    &:hover
+    {
+      .category_listLink,
+      .category_listIcon
       {
-        width: 100%;
-        height: 8px;
-        cursor: pointer;
-        background: $color_gray_low;
-        border-radius: 3px;
-      }
-
-      &::-ms-track 
-      {
-        width: 100%;
-        height: 8px;
-        cursor: pointer;
-        background: $color_blue;
-        border-radius: 3px;
-      }
-
-      &:focus
-      {
-        box-shadow: none;
-        background: none;
-        outline: none;
-      }
-
-      &::-ms-track
-      {
-        width: 100%;
-        cursor: pointer;
-        background: transparent;
-        border-color: transparent;
-        color: transparent;
+        color: $color_rose;
       }
     }
   }
 
-  &_filterPriceLabel
+  &_listLink
   {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 10px !important;
-
-    p
+    &:hover
     {
-      font-size: 14px;
-      margin: 0;
+      text-decoration: none;
     }
   }
 
-  &_filterPriceInput
+  &_listItem
   {
-    padding: 10px;
-    border: 1px solid $color_gray_primary;
-    border-radius: .25rem;
+    @include typographyBuilder(secondary, 400, 14, 24);
   }
 
-  &_filterOption
+  &_listTotalNumber
   {
-    margin-bottom: 5px;
+    @include typographyBuilder(secondary, 400, 14, 24);
+    margin-left: 4px;
+    color: $color_rose;
   }
 
-  &_filterOptionLabel
+  &_listIcon
   {
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-
-    input
-    {
-      margin-right: 5px;
-    }
-  }
-
-  &_filterOptionCheckbox
-  {
-    margin-right: 12px;
-    margin-bottom: 2px;
-  }
-
-  &_empty
-  {
-    text-align: center;
-    margin: 5rem 0;
-
-    i
-    {
-      font-size: 5rem;
-      margin-bottom: 1rem;
-    }
-
-    &_title
-    {
-      font-family: "roboto-black";
-      font-size: 16px;
-    }
-
-    &_desc
-    {
-      font-size: 14px;
-      color: $color_gray_semi_dark;
-    }
-  }
-
-  &_filterSlider
-  {
-    position: relative;
-    width: calc(100% - 20px);
-    margin: 0 auto;
-    margin-bottom: 2.5rem;
-  }
-
-  &_filterSliderRail
-  {
-    position: absolute;
-    width: 100%;
-    height: 10px;
-    border-radius: 7px;
-    background-color: $color_gray_low;
     cursor: pointer;
-    pointer-events: none;
-  }
-
-  &_filterSliderHandle
-  {
-    position: absolute;
-    z-index: 2;
-    margin-top: -6px;
-    margin-left: -10px;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.3);
-    background-color: $color_blue;
-  }
-
-  &_filterSliderTrack
-  {
-    position: absolute;
-    height: 10px;
-    background-color: $color_blue;
-    border-radius: 7px;
-    cursor: pointer;
-  }
-
-  &_filterSliderTooltip
-  {
-    position: absolute;
-    margin-left: -50px;
-    margin-top: -35px;
-  }
-
-  &_filterSliderTooltipContainer
-  {
-    position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted #222;
-    margin-left: 20px;
-  }
-
-  &_filterSliderTooltipText
-  {
-    width: 100px;
-    background-color: #222;
-    color: #fff;
-    opacity: 0.8;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 150%;
-    left: 50%;
-    margin-left: -20px;
-
-    &::after
-    {
-      content: '';
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      margin-left: -5px;
-      border-width: 5px;
-      border-style: solid;
-      border-color: #222 transparent transparent transparent;
-    }
   }
 }
