fix: scss footer
- change style from border to background

--- a/public/scss/components/Footer.module.scss
+++ b/public/scss/components/Footer.module.scss
@@ -47,7 +47,8 @@
         opacity: 0;
         margin: 0;
         padding: 0;
-        border: 2px solid $color_rose;
+        background: $color_rose;
+        height: 2px;
         width: 100%;
       }
     }
