--- a/public/scss/components/OrderSummaryBox.module.scss
+++ b/public/scss/components/OrderSummaryBox.module.scss
@@ -8,11 +8,47 @@
 {
     position: relative;
     margin: 0;
-    padding: 0 0 180px;
+    padding: 0;
+
+    &_extras
+    {
+        padding-bottom: 224px;
+    }
 
     &_placeholder
     {
         margin: 10px 0 0;
+    }
+
+    &_popup
+    {
+        @include flex(row, flex-end, center);
+        @include fixed(0, 0, 0, 0);
+        @include fixedHeight(100vh);
+        @include fixedWidth(375px, true);
+        margin: auto auto 0 !important;
+        z-index: 20;
+
+        @media screen and (max-width: $breakpoint_max_sm)
+        {
+            @include fixedWidth(100%, true);
+        }
+
+        &Background
+        {
+            @include flex();
+            @include fixed(0, 0, 0, 0);
+            @include fixedWidth(375px);
+            @include fixedHeight(100vh);
+            @include transition();
+            margin: auto auto 0 !important;
+            background-color: rgba($color_black, 0.8);
+
+            @media screen and (max-width: $breakpoint_max_sm)
+            {
+                @include fixedWidth(100%, true);
+            }
+        }
     }
 
     &_wrapper
@@ -47,22 +83,24 @@
         z-index: 10;
 
         @include fixed(auto, 0, 24px, 0);
-        @include fixedWidth(340px, true);
+        @include fixedWidth(345px, true);
 
         @media screen and (max-width: $breakpoint_max_sm)
         {
-            @include fixedWidth(calc(100% - 36px), true);
+            @include fixedWidth(calc(100% - 30px), true);
         }
 
         & > div
         {
-            @include typographyBuilder(secondary, 500, 16, 20);
+            @include typographyBuilder(secondary, 500, 14, 24);
             @include truncate(1);
+            color: $color_text_primary;
 
             &:first-of-type,
             &:first-child
             {
-                @include typographyBuilder(secondary, 400, 14, 18);
+                @include typographyBuilder(secondary, 400, 10, 16);
+                color: $color_text_secondary;
             }
         }
     }
@@ -72,7 +110,7 @@
         margin: auto auto 0 !important;
 
         @include fixed(auto, 0, 24px, 0);
-        @include fixedWidth(340px, true);
+        @include fixedWidth(345px, true);
         @include flex(row, center, flex-end);
         border: none;
         background-color: transparent;
@@ -83,7 +121,7 @@
 
         @media screen and (max-width: $breakpoint_max_sm)
         {
-            @include fixedWidth(calc(100% - 36px), true);
+            @include fixedWidth(calc(100% - 30px), true);
         }
     }
 
@@ -102,7 +140,7 @@
             @include transition();
             @extend .btn;
             @extend .btn_primary;
-            @include typographyBuilder(secondary, 500, 14, 18);
+            @include typographyBuilder(secondary, 400, 14, 18);
             @include fixedWidth(calc((100% - (32px + 40px)) / 2));
             @include textOverflow();
             margin: 0;
@@ -140,16 +178,16 @@
         border-radius: 2px 2px 0 0;
         position: relative;
         margin: 0;
-        padding: 20px 20px 70px;
+        padding: 20px 20px 60px;
         margin: auto auto 0 !important;
         z-index: 10;
 
-        @include fixed(auto, 0, 50px, 0);
-        @include fixedWidth(340px, true);
+        @include fixed(auto, 0, 60px, 0);
+        @include fixedWidth(345px, true);
 
         @media screen and (max-width: $breakpoint_max_sm)
         {
-            @include fixedWidth(calc(100% - 36px), true);
+            @include fixedWidth(calc(100% - 30px), true);
         }
 
         & > div
@@ -178,9 +216,10 @@
 
     &_header
     {
-        margin: 24px 18px 0;
+        margin: 24px 0;
     }
-    
+
+    /* Voucher */
     &_voucherButton
     {
         @include fixedHeight(60px);
@@ -189,6 +228,7 @@
         border: 1px solid $color_border;
         background: $color_white;
         border-radius: 37px;
+        cursor: pointer;
 
         &:hover
         {
@@ -208,6 +248,16 @@
         {
             color: $color_yellow;
         }
+
+        &[class*="end"]
+        {
+            @include position(absolute, auto, 12px, auto, auto);
+            @include flex(row, center, center);
+            @include fixedHeight(40px);
+            @include fixedWidth(40px);
+            background: $color_rose_bg2;
+            border-radius: 50%;
+        }
     }
 
     &_voucherText
@@ -215,37 +265,6 @@
         @include typographyBuilder(secondary, 400, 14, 24);
         color: $color_text_placeholder;
         margin-left: 12px;
-    }
-
-    &_popup
-    {
-        @include flex(row, flex-end, center);
-        @include fixed(0, 0, 0, 0);
-        z-index: 20;
-        height: 100vh;
-        margin: auto auto 0 !important;
-        @include fixedWidth(375px, true);
-
-        @media screen and (max-width: $breakpoint_max_sm)
-        {
-            @include fixedWidth(100%, true);
-        }
-
-        &Background
-        {
-            @include flex();
-            @include fixed(0, 0, 0, 0);
-            @include fixedWidth(375px);
-            @include fixedHeight(100vh);
-            @include transition();
-            margin: auto auto 0 !important;
-            background-color: rgba($color_black, 0.8);
-
-            @media screen and (max-width: $breakpoint_max_sm)
-            {
-                @include fixedWidth(100%, true);
-            }
-        }
     }
     
     &_voucherContainer
@@ -269,7 +288,7 @@
     {
         position: relative;
         margin-top: 50px;
-        padding: 9px 12px 9px 24px;
+        padding: 9px 12px;
         background: $color_white;
         border: 1px solid $color_border;
         border-radius: 37px;
@@ -277,16 +296,15 @@
     
     &_voucherList
     {
-        @extend .scrollbar_main;
         overflow-y: auto;
-        max-height: 70vh;
+        max-height: 400px;
         margin-top: 24px;
         background: $color_white;
     }
 
     &_closeButton
     {
-        @include position(absolute, auto, 16px, auto, auto);
+        @include position(absolute, 14px, 14px, auto, auto);
         background: transparent;
         padding: 0;
         border: none;
@@ -301,16 +319,19 @@
 
     &_voucherForm
     {
-        @include flex(row, center, space-between);
         @include fixedWidth(100%);
+        @include flex(row, center, space-between);
     }
     
     &_voucherInput
     {
-        @include fixedWidth(65%);
+        @include fixedWidth(60%);
         @include typographyBuilder(secondary, 400, 14, 24);
-        background: transparent;
+        color: $color_text_primary;
         border: none;
+        padding: 17px;
+        margin: 0 5px;
+        background: transparent;
 
         &:active,
         &:focus
@@ -324,8 +345,8 @@
     {
         @extend .btn;
         @extend .btn_primary;
-        @include fixedWidth(30%);
         @include typographyBuilder(secondary, 400, 12, 18);
+        @include fixedWidth(30%);
     }
 
     &_voucherListHeader
@@ -383,18 +404,16 @@
     /* vouche applied */
     &_voucherButtonApplied
     {
+        position: relative;
+        @include fixedWidth(100%);
         @include fixedHeight(60px);
         @include flex(row, center, flex-start);
-        width: 100%;
-        cursor: pointer;
-        border-bottom: 1px solid $color_grey;
-        padding: 0 16px;
+        border: 1px solid $color_border;
+        border-radius: 37px;
+        padding: 17px;
+        margin-bottom: 12px;
         background: $color_white;
-
-        &:hover
-        {
-            opacity: .8;
-        }
+        cursor: pointer;
     }
 
     &_voucherAppliedIcon
@@ -407,18 +426,76 @@
 
     &_voucherAppliedText
     {
-        color: $color_black;
+        color: $color_text_primary;
         margin-left: 15px;
     }
 
     &_voucherButtonRemove
     {
-        @include position(absolute, auto, 16px, auto, auto)
+        @include position(absolute, auto, 12px, auto, auto);
+        @include flex(row, center, center);
+        @include fixedHeight(40px);
+        @include fixedWidth(40px);
+        background: $color_rose_bg2;
+        border-radius: 50%;
     }
 
-
     /* point */
-       
+    &_pointsContainer
+    {
+        @include position(relative);
+        @include fixedWidth(375px);
+        @include transition();
+        min-height: 0;
+        max-height: calc(100vh - 58px);
+        height: auto;
+        margin: auto auto 0 !important;
+        padding: 16px;
+        background-color: $color_white;
+        border-radius: 4px 4px 0px 0px;
+
+        @media screen and (max-width: $breakpoint_max_sm)
+        {
+            @include fixedWidth(100%, true);
+        }
+    }
+
+    &_pointsChange
+    {
+        @include fixedWidth(60px);
+        @include fixedHeight(60px);
+        @include typographyBuilder(secondary, 400, 24, 24);
+        color: $color_text_primary;
+        border: 1px solid $color_border;
+        border-radius: 37px;
+        background: transparent;
+
+        &:active,
+        &:focus
+        {
+            outline: 0;
+            box-shadow: none;
+        }
+
+        &[class*="increment"]
+        {
+            order: 3;
+        }
+
+        &[class*="decrement"]
+        {
+            order: 1;
+        }
+    }
+
+    &_pointsSubmitButton
+    {
+        @extend .btn;
+        @extend .btn_primary;
+        @include typographyBuilder(secondary, 400, 12, 18);
+        margin-top: 24px;
+    }
+
     &_pointsButton
     {
         @include fixedHeight(60px);
@@ -454,34 +531,36 @@
         margin-left: 15px;
     }
 
-    &_pointsContainer
-    {
-        background: $color_white;
-        border: 1px solid $color_grey;
-    }
-
     &_pointsFormContainer
     {
         position: relative;
-        padding: 0 16px 11px 16px;
-        display: flex;
+        @include flex(column, center, center);
     }
 
     &_pointsForm
     {
-        width: 65%;
+        @include flex(row, center, center);
+        @include fixedWidth(100%);
 
         input
         {
-            width: 100%;
-        }
-    
-    }
+            @include fixedWidth(calc(100% - 140px));
+            @include typographyBuilder(secondary, 400, 14, 24);
+            color: $color_text_primary;
+            border: 1px solid $color_border;
+            border-radius: 37px;
+            padding: 17px;
+            margin: 0 5px;
+            background: transparent;
+            order: 2;
 
-    &_pointsSubmitButton
-    {
-        margin-left: 10px;
-        width: 35%;
+            &:active,
+            &:focus
+            {
+                outline: 0;
+                box-shadow: none;
+            }
+        }
     }
     
     &_numberOfPoints
@@ -491,27 +570,31 @@
     
     &_pointsWarning
     {
-        padding: 0 16px 16px 16px;
+        padding: 0 0 16px;
 
         p
         {
-            @include typographyBuilder(secondary, 400, 14, 18);
-            color: $color_text_primary;
-            margin: 16px 0 0 0;
+            @include typographyBuilder(secondary, 400, 11, 16);
+            text-align: center;
+            color: $color_red;
+            margin: 8px 0 0 0;
         }
     }
 
     &_totalPoints
     {
-        svg
+        @include flex(column, center, center);
+
+        img
         {
-            display: none;
+           width: 25px;
+           margin-bottom: 10px;
         }
     }
 
     &_pointValue
     {
-        @include typographyBuilder(secondary, 500, 14, 18);        
+        @include typographyBuilder(secondary, 400, 14, 24);
     }
     
     &_pointsInsufficient
@@ -548,8 +631,6 @@
         grid-row: 2/2;
         grid-column: 2/2;
     }
-
-    
 
     &_cartItem
     {
