--- a/public/scss/pages/Lookbook.module.scss
+++ b/public/scss/pages/Lookbook.module.scss
@@ -36,10 +36,19 @@
     &_itemDetail
     {
       position: absolute;
-      top: 0;
+      bottom: 0;
       width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.2);
+      height: 50%;
+      &::after
+      {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+        transform: matrix(1, 0, 0, -1, 0, 0);
+      }
     }
 
     &_link
@@ -57,6 +66,7 @@
       width: 100%;
       bottom: 0;
       color: $color_white;
+      z-index: 2;
       padding: 12px 16px;
       @include typographyBuilder(primary,500,20,32);
     }
