--- a/public/scss/pages/Lookbook.module.scss
+++ b/public/scss/pages/Lookbook.module.scss
@@ -38,14 +38,14 @@
       position: absolute;
       bottom: 0;
       width: 100%;
-      height: 50%;
+      height: 100%;
       &::after
       {
         content: '';
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 100%;
+        height: 50%;
         background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
         transform: matrix(1, 0, 0, -1, 0, 0);
       }
@@ -78,6 +78,31 @@
         text-decoration: none;
         @include typographyBuilder(secondary,500,14,24); 
         color: $color_rose;
+      }
+    }
+
+    &_detail
+    {
+      &_title
+      {
+        text-align: center;
+        margin-bottom: 12px;
+        @include typographyBuilder(primary,500,28,40);
+        color: $color_rose;
+      }
+
+      &_img
+      {
+        width: 100%;
+        padding: 12px 17.5px;
+      }
+
+      & > ul
+      {
+        list-style-type:none;
+        
+        margin:0;
+        padding:0;
       }
     }
 }
