--- a/public/scss/pages/Lookbook.module.scss
+++ b/public/scss/pages/Lookbook.module.scss
@@ -81,28 +81,37 @@
       }
     }
 
-    &_detail
+  &_detail
+  {
+    &_title
     {
-      &_title
-      {
-        text-align: center;
-        margin-bottom: 12px;
-        @include typographyBuilder(primary,500,28,40);
-        color: $color_rose;
-      }
-
-      &_img
-      {
-        width: 100%;
-        height: 375px;
-        padding: 12px 17.5px;
-      }
-
-      & > ul
-      {
-        list-style-type:none;
-        margin:0;
-        padding:0;
-      }
+      text-align: center;
+      margin-bottom: 12px;
+      @include typographyBuilder(primary,500,28,40);
+      color: $color_rose;
     }
+
+    &_img
+    {
+      width: 100%;
+      height: 375px;
+      padding: 12px 17.5px;
+    }
+
+    & > ul
+    {
+      list-style-type:none;
+      margin:0;
+      padding:0;
+    }
+  }
+
+  &_relatedProducts
+  {
+    text-align: center;
+    @include typographyBuilder(primary,500,20,32);
+    padding-bottom: 24px;
+    padding-top: 12px;
+    color: $color_text_primary;
+  }
 }
