--- a/public/scss/pages/Blog.module.scss
+++ b/public/scss/pages/Blog.module.scss
@@ -22,6 +22,7 @@
     display: flex;
     height: 40px;
     overflow: auto;
+    margin-top: 16px;
     margin-left: 17px;
   }
 
@@ -173,12 +174,67 @@
       & > *
       {
         padding: 0 17px;
+        color: $color_text_primary;
+        margin: 0;
+      }
+
+      & > ul,ol
+      {
+        padding: 0 40px;
+      }
+
+      & > h1
+      {
+        @include typographyBuilder(primary,500,32,48);
+      }
+
+      & > h2
+      {
+        @include typographyBuilder(primary,500,28,40);
+      }
+
+      & > h3
+      {
+        @include typographyBuilder(primary,500,20,32);
       }
 
       & > img
       {
         padding: 0;
+        width: 100%;
       }
+    }
+  }
+
+  &_recent
+  {
+    background-color: $color_rose_bg1;
+    padding-top: 24px;
+
+    &_title
+    {
+      padding: 0 16px;
+      @include typographyBuilder(primary,500,20,32);
+    }
+  }
+
+  &_footer
+  {
+    color: $color_rose;
+    text-decoration: none;
+    padding: 0 19px;
+    padding-top: 7px;
+
+    & > a 
+    {
+      color: $color_rose;
+      text-decoration: none;
+    }
+    
+    
+    & > a > svg
+    {
+      margin-right: 15px;
     }
   }
 
