fix: section product review

--- a/public/scss/components/ProductDetail.module.scss
+++ b/public/scss/components/ProductDetail.module.scss
@@ -393,8 +393,10 @@
 .ratingReview
 {
   @include flex(row, center, space-between);
-  padding: 24px 0;
+  padding: 32px 0;
+  margin-bottom: 24px;
   border-top: 1px solid $color_border;
+  border-bottom: 1px solid $color_border;
   cursor: pointer;
 
   &_title
@@ -405,6 +407,11 @@
   &_extra
   {
     padding-bottom: 106px;
+
+    &Revert
+    {
+      padding-bottom: 32px;
+    }
   }
 }
 
